--- a/index.html
+++ b/index.html
@@ -9,38 +9,87 @@
 <body>
 <main>
   <div class="questions">
-      <div class="questions__title">
-      <h3>Вопросы</h3>
+      <h3 class="main__title">Вопросы</h3>
       <h4>Все что вы хотите знать</h4>
-      </div>
+
       <div class="questions__content">
           <div class="questions-background"></div>
           <div class="questions__icons">
-              <div class="questions__icon">
+
+
+
+              <div class="questions__container">
+              <div class="questions__icon toggle">
+                  <div class="plus-element ver"></div>
+                  <div class="plus-element hor"></div>
+              </div>
+              <div class="questions__icon-title">
                   <h3>Как оформить заказ?</h3>
               </div>
-              <div class="questions__icon">
-                  <button class="toggle-button"></button>
-                 <h3>Как работает служба доставки?</h3>
-                  <div class="text"><p>При заказе до 17:00 доставка осуществляется в день заказа. Среднее время доставки 2 часа.
+              </div>
+
+
+              <div class="questions__container">
+                  <div class="questions__icon toggle toggle-button">
+                      <div class="plus-element ver"></div>
+                      <div class="plus-element hor"></div>
+                  </div>
+                  <div class="questions__icon-title">
+                  <h3>Как работает служба доставки?</h3>
+                  </div>
+              <div class="questions__icon-content">
+                  <p>При заказе до 17:00 доставка осуществляется <span>в день заказа</span>. Среднее время доставки 2 часа.
                       Доставка осуществляется до 20:00 ежедневно. Мы работаем без выходных и праздников, чтобы Вы
-                      всегда могли кушать вкусную и здоровую еду! Доставка осуществляется бесплатно при заказе от
-                      1500 руб. по г.Москва в пределах МКАД</p></div>
+                      всегда могли кушать вкусную и здоровую еду!</p>
+                  <p>Доставка осуществляется <span>бесплатно</span> при заказе от 1500 руб. по г.Москва в пределах МКАД</p>
               </div>
-              <div class="questions__icon">
+              </div>
+
+
+              <div class="questions__container">
+                  <div class="questions__icon toggle">
+                      <div class="plus-element ver"></div>
+                      <div class="plus-element hor"></div>
+                  </div>
+                  <div class="questions__icon-title">
                   <h3>Условия доставки за пределами МКАД</h3>
+                  </div>
               </div>
-              <div class="questions__icon">
+
+              <div class="questions__container">
+                  <div class="questions__icon toggle">
+                      <div class="plus-element ver"></div>
+                      <div class="plus-element hor"></div>
+                  </div>
+                  <div class="questions__icon-title">
                   <h3>Какие способы оплаты у вас есть?</h3>
+                  </div>
               </div>
-              <div class="questions__icon">
+
+              <div class="questions__container">
+                  <div class="questions__icon toggle">
+                      <div class="plus-element ver"></div>
+                      <div class="plus-element hor"></div>
+                  </div>
+                  <div class="questions__icon-title">
                   <h3>У меня есть промокод, но я не понимаю как им пользоваться</h3>
+                  </div>
               </div>
+
+
+
+
+
+
+
+
           </div>
 
       </div>
   </div>
+
 </main>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="main.js"></script>
 </body>
 </html>
